# stagger

./: MANIFEST.in  README.md  pyproject.toml  train.py
.github/workflows/: oytest.yaml  package-check.yaml  python-publish.yaml
src/stagger/checkpoints/codebook/: lite.pt
src/stagger/cli/: build_model.py  smoke_test.py
src/stagger/configs/: config.yaml
src/stagger/configs/data/: base.yaml
src/stagger/configs/model/: encoder.yaml
src/stagger/configs/train/: base.yaml
src/stagger/data/: collate.py  dataset.py
src/stagger/models/: attention.py  blocks.py  encoder.py  head.py  mlp.py  rope.py  tagger.py
src/stagger/utils/: codebook.py  losses.py  masking.py  tokenizer.py
src/stok/cli/: cli.py  smoke_test.py  train.py
src/stok/configs/data/: base.yaml
src/stok/configs/model/: arch.yaml  decoder.yaml  encoder.yaml
src/stok/data/: dataset.py
src/stok/models/: decoder.py  gcpnet.py  stok.py  tagger.py
src/stok/utils/: featurizer.py  gcp.py  geometry.py  losses.py
tests/: README.md  conftest.py
tests/integration/: test_cli_train_smoke.py  test_cli_train_with_csv.py  test_cli_train_with_csv_varlen.py  test_click_cli.py  test_codebook_loading.py  test_decoder_loader.py  test_e2e_tagger_training.py  test_package_data.py  test_run_training_programmatic.py
tests/unit/: test_fape_loss.py  test_tokenize_and_align.py  test_train_helpers.py
tests/utils/: synthetic.py
